starter-project/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # this specify the number of pods for a particular image
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: tonyatlcs/comments:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 64Mi
              cpu: "1"
            requests:
              memory: 64Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
