starter-project/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  # this specify the number of pods for a particular image
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: tonyatlcs/event-bus:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 64Mi
              cpu: "1"
            requests:
              memory: 64Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
