starter-project/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # this specify the number of pods for a particular image
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: tonyatlcs/moderation:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 64Mi
              cpu: "1"
            requests:
              memory: 64Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
